SecureUtil中的base64EncodeTable改为私有

2.6.2
丰富ReUtil方法
增加Func类提供一些常用函数（equals或者length）

----------------------------------------------------------------------

2.7.0
1. 增加缓存（com.xiaoleilu.hutool.cache）
2. 增加Validator验证器，用于表单验证

2.7.1
1. StrUtil增加 nullToEmpty和emptyToNull方法
2. StrUtil的convertCharset迁移到Conver类中
3. StrUtil增加 padPre 和 padEnd
4. StrUtil的repeat方法提高性能

2.7.2
1. 去除无用依赖

2.7.3
1. SecureUtil中增加mac算法的加密

2.7.4
1. 增加针对byte的md5方法
2.增加StrUtil.str(byte[])
3. 修复SecureUtil中base64方法

2.8.0
1.增加HTTP模块
2. 修复VelocityUtil空指针问题

2.8.1
1. 修复ClassUtil中报名前缀为空时扫描类失败的错误

2.8.2
1. 修复Strutil.hasBlank方法

2.8.3
1. 增加DaoTemplate
2. 调整SqlExecutor、SqlConnRunner、SqlRunner三个类的功能区分，去除继承依赖

2.8.4
1. 修复DaoTemplate

2.8.5
1. 为VelocityUtil增加Session参数的读取

2.8.6
1. 修复VelocityUtil中Session参数的bug

2.8.7
1. DaoTemplate增加addOrUpdate方法
2. SqlBuilder增加IN，修复WHERE条件为空时WHERE关键字丢失问题

2.9.0
1. 为Velocity添加全局上下文功能

2.9.1
1. 修复db的SqlBuilder中where语句为空导致语法错误

2.9.2
1. 优化Singleton类，轻量化同步

2.9.3
1. 优化代码格局

2.9.4
1. 增加HandleHelper.HandleRow方法，只接受一个ResultSet对象

2.9.5
1. 修复ClassPath带空格和中文导致的Class文件找不到

2.9.6
1. 更新依赖的包版本为最新

2.9.7
1. 修复Oracle的SQL语句中反引号导致的错误
2. 修复空Where语句导致的表名找不到引起的空指针问题（优化错误提示）

2.9.8
1. 修复DaoTemplate中add和update方法默认获取不到当前表名的问题
2. 修复Entity的fillVo方法返回对象错误问题

2.9.9
1. StrUtil.encode和byte方法重了，并修改方法内容，使charset为空时使用平台相关字符集
2. HttpUtil中获得客户端IP地址处理多级反向代理

2.9.10
1.修复Oracle无自增主键insert报错问题

2.10.0
1. 扩展insert方法，使之返回插入行数、主键、Long型自增主键并存

2.10.1
1. 扩展DaoTemplate方法

2.11.0
1. FileUtil中增加normalizePath方法
2. 增加ZipUtil

2.11.1
1. 修改XmlUtil

2.11.2
1. 增加getAbsolutePath方法
2. 增加URLUtil.getPath方法

2.11.3
1. 修改InjectUtil，支持忽略大小写

2.11.4
Entity中toVo区别是否忽略大小写

2.11.5
1、修复HTTP模块中空参数导致的空指针问题

2.11.6
1、修复LogWraper的问题
2、修复isURL验证错误问题

2.12.0
1、FileUtil增加递归获取文件目录的方法
2、增加JarClassLoader类，用于加载外部Jar文件

2.12.1
1、修复Oracle引号包围和nextval的大小写问题
2、Entity加入字段限制机制
3、增加一些日期方法
4、修复空组GroupedSet的bug
5、增加FileUtil从文件中读取字符串和行

2.12.2
1、Setting继承于BasicSetting，并改用HashTable防止并发问题
2、在Entity中增加clone方法和toString()方法
3、DbUtil中增加方法，用于将表字段加入到Entity，限制Entity内容范围