@@ -145,3 +145,4 @@ Entity中toVo区别是否忽略大小写
 1、Setting继承于BasicSetting，并改用HashTable防止并发问题
 2、在Entity中增加clone方法和toString()方法
 3、DbUtil中增加方法，用于将表字段加入到Entity，限制Entity内容范围
+4、增加CronUtil的一些管理方法，暴露Scheduler对象给用户
